# test_kconfig

./: .gitignore  CMakeLists.txt
project/test_conf/: CMakeLists.txt
project/test_qconf/: CMakeLists.txt  qconf.cc  qconf.h  qconf.moc  readme.txt
sdk/: Kconfig  build.cmake  def.cmake
sdk/share/kconfig-frontends-3.12/: CMakeLists.txt
sdk/share/kconfig-frontends-3.12/parser/: confdata.c  expr.h  hconf.c  lconf.c  list.h  lkc.h  lkc_proto.h  menu.c  symbol.c  yconf.c
sdk/share/qt4.8.5-lite/src/corelib/global/: qconfig.h
sdk/share/regex2.7/: CMakeLists.txt  config.h  localcharset.c
